# ai-eng-projects-2

./: pyproject.toml
project_1/: lm_playground.ipynb
project_2/: rag_chatbot.ipynb
