[project]
name = "ai-eng-projects-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "sentence-transformers==4.1.0",
    "streamlit==1.45.1",
    "openai==1.79.0",
    "faiss-cpu==1.11.0",
    "unstructured==0.17.2",
    "ipykernel>=7.1.0",
    "pip>=25.3",
]
